# velocity

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: velocity.rb
crates/velocity-android/: Cargo.toml
crates/velocity-android/src/: adb.rs  adb_backend.rs  async_adb.rs  driver.rs  lib.rs  parser.rs  selector.rs
crates/velocity-common/: Cargo.toml
crates/velocity-common/src/: config.rs  error.rs  lib.rs  resilience.rs  result.rs  selector_match.rs  test_types.rs  traits.rs  types.rs
crates/velocity-core/: Cargo.toml
crates/velocity-core/src/: dialog_handler.rs  env.rs  executor.rs  healing.rs  impact.rs  lib.rs  native_sync.rs  parser.rs  profiler.rs  resolver.rs  selector.rs  selector_lint.rs  streaming.rs  sync.rs  tree_diff.rs  validator.rs  visual.rs
crates/velocity-flutter-bridge/: Cargo.toml
crates/velocity-flutter-bridge/dart/: pubspec.yaml
crates/velocity-flutter-bridge/dart/lib/: velocity_flutter_helper.dart
crates/velocity-flutter-bridge/dart/lib/src/: bridge_server.dart  hierarchy_extractor.dart  screenshot_capture.dart
crates/velocity-flutter-bridge/dart/test/: velocity_flutter_helper_test.dart
crates/velocity-flutter-bridge/src/: config.rs  driver.rs  lib.rs  process.rs  protocol.rs
crates/velocity-headless/: Cargo.toml
crates/velocity-headless/src/: config.rs  driver.rs  element_map.rs  layout.rs  lib.rs  render_tree.rs  session.rs  snapshot.rs  surface.rs  text.rs
crates/velocity-headless/src/android/: apk.rs  axml.rs  inflate.rs  mod.rs  resources.rs  styles.rs
crates/velocity-headless/src/ios/: constraints.rs  inflate.rs  mod.rs  resources.rs  storyboard.rs  xib.rs
crates/velocity-inspector/: Cargo.toml  build.rs
crates/velocity-inspector/frontend/: index.html  package-lock.json  package.json
crates/velocity-inspector/frontend/src/: App.tsx  index.css
crates/velocity-inspector/frontend/src/api/: client.ts  types.ts  websocket.ts
crates/velocity-inspector/frontend/src/components/: ActionToolbar.tsx  DevicePicker.tsx  ElementTree.tsx  PerformanceChart.tsx  PropertiesPanel.tsx  RecordingPanel.tsx  ScreenshotCanvas.tsx  SelectorDisplay.tsx
crates/velocity-inspector/frontend/src/hooks/: useWebSocket.ts
crates/velocity-inspector/frontend/src/store/: inspectorStore.ts
crates/velocity-inspector/src/: embedded.rs  lib.rs  selector_gen.rs  server.rs  state.rs  ws.rs  yaml_gen.rs
crates/velocity-inspector/src/routes/: actions.rs  devices.rs  headless.rs  hierarchy.rs  mod.rs  recording.rs  screenshot.rs  selector.rs
crates/velocity-ios/: Cargo.toml
crates/velocity-ios/src/: driver.rs  lib.rs  parser.rs  simctl.rs  wda.rs  wda_bootstrap.rs  wda_manager.rs
crates/velocity-mcp/: Cargo.toml
crates/velocity-mcp/src/: lib.rs  server.rs  session.rs  tool_registry.rs
crates/velocity-mcp/src/tools/: device.rs  flow.rs  inspector.rs  interaction.rs  mod.rs  query.rs
crates/velocity-migrate/: Cargo.toml
crates/velocity-migrate/src/: compat.rs  lib.rs  maestro.rs
crates/velocity-rn-bridge/: Cargo.toml
crates/velocity-rn-bridge/sidecar/: build.gradle.kts  settings.gradle.kts
crates/velocity-rn-bridge/sidecar/src/main/kotlin/com/velocity/rn/sidecar/: BridgeServer.kt  HeadlessRenderer.kt  Main.kt
crates/velocity-rn-bridge/src/: client.rs  config.rs  driver.rs  lib.rs  protocol.rs
crates/velocity-runner/: Cargo.toml
crates/velocity-runner/src/: artifacts.rs  farm.rs  history.rs  lib.rs  parallel.rs  runner.rs  scheduler.rs
crates/velocity-runner/src/reporter/: json.rs  junit.rs  mod.rs
docs/: ARCHITECTURE.md  MCP_TOOLS_UPDATE.md
probes/android/velocity-sync-probe/: build.gradle.kts
probes/android/velocity-sync-probe/src/main/kotlin/com/velocity/sync/: SyncServer.kt  VelocitySyncProbe.kt
probes/ios/VelocitySyncProbe/: Package.swift
probes/ios/VelocitySyncProbe/Sources/: AnimationTracker.swift  AppStateTracker.swift  NetworkTracker.swift  RunLoopObserver.swift  SyncServer.swift  TimerTracker.swift  VelocitySyncProbe.swift
tests/: loyalty-app.yaml
tests/fixtures/: multi_flow.yaml  sharding_test.yaml  simple_login.yaml
tests/fixtures/maestro_compat/: checkout.yaml  login.yaml
velocity-cli/: Cargo.toml
velocity-cli/src/: main.rs
velocity-cli/src/commands/: device.rs  inspect.rs  lint.rs  mcp.rs  migrate.rs  mod.rs  run.rs  validate.rs
