[workspace]
resolver = "2"
members = [
    "crates/velocity-common",
    "crates/velocity-android",
    "crates/velocity-ios",
    "crates/velocity-core",
    "crates/velocity-runner",
    "crates/velocity-mcp",
    "crates/velocity-migrate",
    "velocity-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
lru = "0.12"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
colored = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
