[package]
name = "velocity-android"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android driver for Velocity: ADB shell commands + uiautomator a11y tree parsing"

[dependencies]
velocity-common = { path = "../velocity-common" }
tokio = { workspace = true }
quick-xml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
