[package]
name = "velocity-flutter-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flutter bridge for Velocity — headless rendering via flutter test with WidgetTester"

[dependencies]
velocity-common = { path = "../velocity-common" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
