[package]
name = "velocity-headless"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless rendering engine for Velocity — CPU-only layout and pixel rendering for Android XML and iOS XIB"

[dependencies]
velocity-common = { path = "../velocity-common" }

# Graphics & layout
tiny-skia = "0.11.4"
taffy = "0.9.2"
cosmic-text = "0.16.0"
fontdb = { version = "0.23", default-features = false }
png = "0.18.1"

# Android adapter
zip = { version = "2", default-features = false, features = ["deflate"] }

# iOS adapter (quick-xml already in workspace)
quick-xml = { workspace = true }
plist = "1"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
regex = { workspace = true }
