[package]
name = "velocity-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for Velocity: AI-accessible mobile automation tools"

[dependencies]
velocity-common = { path = "../velocity-common" }
velocity-core = { path = "../velocity-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
