[package]
name = "velocity-rn-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "React Native bridge for Velocity — headless rendering via LayoutLib sidecar (Android) or RCTRootView (iOS)"

[dependencies]
velocity-common = { path = "../velocity-common" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
